--- a/packages/renderer/src/index.css
+++ b/packages/renderer/src/index.css
@@ -1,4 +1,8 @@
+html, body {
+  background-color: transparent;
+}
 body{
+  background-color: transparent;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', "Roboto", "Ubuntu", "Canterelle", "Fira Sans", "Droid Sans", "Helvetica Nueue", serif;
   -webkit-font-smoothing: antialiased;
